--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ let films = [
 {title:"Holy Motors", year:2012, desc:"Carax transformations scènes absurdes, performance cinéma expérimental", category:"Expérimental", img:"images/Holy%20Motors.jpg"},
 {title:"Baraka", year:1992, desc:"Ron Fricke images monde, nature et humanité, expérimental visuel", category:"Expérimental", img:"images/Baraka.jpg"},
 {title:"Koyaanisqatsi", year:1982, desc:"Reggio nature vs civilisation, montage musique Philip Glass, expérimental", category:"Expérimental", img:"images/Koyaanisqatsi.jpg"},
-{title:"Dog Star Man", year:1961, desc:"Brakhage abstrait expérimental, exploration visuelle et sonore", category:"Expérimental", img:"images/Dog%20Star%20Man.jpg"},
+{title:"Dog Star Man", year:1961, desc:"Brakhage abstrait expérimental, exploration visuelle et sonore", category:"Expérimental", img:"images/dog%20star%20man.jpg"},
 {title:"Wavelength", year:1967, desc:"Brakhage observateur appartement, minimalisme, expérimental psyché", category:"Expérimental", img:"images/Wavelength.jpg"},
 {title:"La Jetée", year:1962, desc:"Marker photo narration, post-apocalypse, expérimental SF", category:"Expérimental", img:"images/La%20Jetée.jpg"},
 {title:"Sans Soleil", year:1983, desc:"Marker voyage mémoire, essais cinéma, expérimental contemplatif", category:"Expérimental", img:"images/Sans%20Soleil.jpg"},
