Fix image filename casing for La Jetée
Corrected the image filename casing for 'La Jetée'.

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ let films = [
 {title:"Koyaanisqatsi", year:1982, desc:"Reggio nature vs civilisation, montage musique Philip Glass, expérimental", category:"Expérimental", img:"images/Koyaanisqatsi.jpg"},
 {title:"Dog Star Man", year:1961, desc:"Brakhage abstrait expérimental, exploration visuelle et sonore", category:"Expérimental", img:"images/dog%20star%20man.jpg"},
 {title:"Wavelength", year:1967, desc:"Brakhage observateur appartement, minimalisme, expérimental psyché", category:"Expérimental", img:"images/Wavelength.jpg"},
-{title:"La Jetée", year:1962, desc:"Marker photo narration, post-apocalypse, expérimental SF", category:"Expérimental", img:"images/La%20Jetee.jpg"},
+{title:"La Jetée", year:1962, desc:"Marker photo narration, post-apocalypse, expérimental SF", category:"Expérimental", img:"images/La%20jetee.jpg"},
 {title:"Sans Soleil", year:1983, desc:"Marker voyage mémoire, essais cinéma, expérimental contemplatif", category:"Expérimental", img:"images/Sans%20Soleil.jpg"},
 {title:"Dogville", year:2003, desc:"Von Trier minimalisme, théâtre filmé, expérimental narratif", category:"Expérimental", img:"images/Dogville.jpg"},
 {title:"Tropical Malady", year:2004, desc:"Apichatpong Thaïlande conte mystique, expérimental émotionnel", category:"Expérimental", img:"images/Tropical%20Malady.jpg"},
