--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ input, select {
 .Horreur { box-shadow:0 0 0 1px #ff355d44; }
 .Expérimental { box-shadow:0 0 0 1px #ff8bdc44; }
 .Thriller { box-shadow:0 0 0 1px #ffc24b44; }
+.Queer { box-shadow:0 0 0 1px #ff424b44; }
 
 /* seen */
 .seen {
@@ -179,6 +180,7 @@ input, select {
     <option>Horreur</option>
     <option>Expérimental</option>
     <option>Thriller</option>
+    <option>Queer</option>
   </select>
 </div>
 
