Update film entries in index.html
Removed several film entries from the lists and added new entries under the 'Queer' category.

--- a/index.html
+++ b/index.html
@@ -204,7 +204,6 @@ let films = [
   {title:"The Last Wave", year:1977, desc:"Weir Australie aborigène, apocalypse onirique mystique", category:"Weird", img:"images/The%20Last%20Wave.jpg"},
   {title:"Picnic at Hanging Rock", year:1975, desc:"Weir disparition mystérieuse, atmosphère envoûtante victorienne", category:"Weird", img:"images/Picnic%20at%20Hanging%20Rock.jpg"},
   {title:"Werckmeister Harmonies", year:2000, desc:"Tarr baleine géante, chaos rural hongrois, plans longs", category:"Weird", img:"images/Werckmeister%20Harmonies.jpg"},
- 
   {title:"Dancer in the Dark", year:2000, desc:"Von Trier Björk tragédie musicale, peine capitale déchirante", category:"Weird", img:"images/Dancer%20in%20the%20Dark.jpg"},
   {title:"Antichrist", year:2009, desc:"Von Trier forêt cauchemar, deuil sexualité violence graphique", category:"Weird", img:"images/Antichrist.jpg"},
   {title:"Gummo", year:1997, desc:"Korine Ohio tornade aftermath, esthétique trash poétique", category:"Weird", img:"images/Gummo.jpg"},
@@ -249,7 +248,6 @@ let films = [
   {title:"The House That Jack Built", year:2018, desc:"Von Trier meurtre obsession, narration non linéaire, provocations extrêmes", category:"Weird", img:"images/The%20House%20That%20Jack%20Built.jpg"},
   {title:"Under the Silver Lake", year:2018, desc:"Soley LA énigmes complot, mystère noir, esthétique rétro", category:"Weird", img:"images/Under%20the%20Silver%20Lake.jpg"},
   {title:"Swiss Army Man", year:2016, desc:"Daniel Kwan & Daniel Scheinert corps mort animé, amitié absurde, comédie noire", category:"Weird", img:"images/Swiss%20Army%20Man.jpg"},
-  
   {title:"The Greasy Strangler", year:2016, desc:"Jim Hosking humour noir, bizarrerie grotesque, dance macabre", category:"Weird", img:"images/The%20Greasy%20Strangler.jpg"},
   {title:"The Color of Pomegranates", year:1969, desc:"Parajanov poésie visuelle, abstraction culturelle, arménie surréaliste", category:"Weird", img:"images/The%20Color%20of%20Pomegranates.jpg"},
 
@@ -294,7 +292,6 @@ let films = [
 {title:"The Road", year:2009, desc:"Père et fils, survie après effondrement", category:"Dystopie", img:"images/The%20Road.jpg"},
 {title:"Snowpiercer", year:2013, desc:"Train post-apo, lutte de classes", category:"Dystopie", img:"images/Snowpiercer.jpg"},
 {title:"Mad Max: Fury Road", year:2015, desc:"Désert, vitesse, chaos visuel", category:"Dystopie", img:"images/Mad%20Max%20Fury%20Road.jpg"},
-{title:"V for Vendetta", year:2005, desc:"Masque, résistance, État totalitaire", category:"Dystopie", img:"images/V%20for%20Vendetta.jpg"},
 {title:"Equilibrium", year:2002, desc:"Société sans émotions, gun-kata", category:"Dystopie", img:"images/Equilibrium.jpg"},
 {title:"The Handmaid's Tale", year:1990, desc:"Régime théocratique, oppression féminine", category:"Dystopie", img:"images/The%20Handmaid's%20Tale.jpg"},
 {title:"THX 1138", year:1971, desc:"Contrôle total, société aseptisée", category:"Dystopie", img:"images/THX%201138.jpg"},
@@ -357,7 +354,6 @@ let films = [
 
 // Thriller
 {title:"The Invitation", year:2015, desc:"Dîner retrouvailles, paranoia justifiée, tension slow-burn", category:"Thriller", img:"images/The%20Invitation.jpg"},
-{title:"The Vanishing", year:1988, desc:"Sluizer disparition obsession, psychopathe méthodique hollandais", category:"Thriller", img:"images/The%20Vanishing.jpg"},
 {title:"Gone Girl", year:2014, desc:"Fincher disparition, manipulation médiatique, thriller psyché", category:"Thriller", img:"images/Gone%20Girl.jpg"},
 {title:"Zodiac", year:2007, desc:"Fincher enquête obsessionnelle, tueur en série, thriller méthodique", category:"Thriller", img:"images/Zodiac.jpg"},
 {title:"Prisoners", year:2013, desc:"Villeneuve disparition enfants, tension étouffante, thriller noir", category:"Thriller", img:"images/Prisoners.jpg"},
@@ -365,7 +361,35 @@ let films = [
 {title:"Shutter Island", year:2010, desc:"Scorsese asile, twists, enquête paranoïaque thriller", category:"Thriller", img:"images/Shutter%20Island.jpg"},
 {title:"Memento", year:2000, desc:"Nolan mémoire inversée, vengeance, thriller psyché", category:"Thriller", img:"images/Memento.jpg"},
 {title:"Oldboy", year:2003, desc:"Park vengeance obsessionnelle, manipulation, thriller coréen", category:"Thriller", img:"images/Oldboy.jpg"},
-{title:"The Game", year:1997, desc:"Fincher mystère jeux contrôle, suspense paranoïaque, thriller psyché", category:"Thriller", img:"images/The%20Game.jpg"}
+{title:"The Game", year:1997, desc:"Fincher mystère jeux contrôle, suspense paranoïaque, thriller psyché", category:"Thriller", img:"images/The%20Game.jpg"},
+  {title:"Liquid Sky", year:1982, desc:"New wave NYC, aliens & androgynie, esthétique new wave queer", category:"Queer", img:"images/Liquid%20Sky.jpg"},
+{title:"High Life", year:2018, desc:"Sexualité, reproduction, corps en spatialité extrême", category:"Queer", img:"images/High%20Life.jpg"},
+{title:"Mute", year:2018, desc:"Cyberpunk Berlin, identité défaillante", category:"Queer", img:"images/Mute.jpg"},
+{title:"Thelma", year:2017, desc:"Pouvoirs psychiques & désir, dans une SF nordique mystérieuse", category:"Queer", img:"images/Thelma.jpg"},
+{title:"Genesis", year:2021, desc:"Asexualité, genre, clonage et désir futuriste", category:"Queer", img:"images/Genesis.jpg"},
+{title:"The Zone of Interest", year:2023, desc:"(expérimental / alt narratif), perception, humanité corrompue", category:"Queer", img:"images/The%20Zone%20of%20Interest.jpg"},
+  {title:"Funeral Parade of Roses", year:1969, desc:"Tokyo underground trans, performance & hallucination", category:"Queer", img:"images/Funeral%20Parade%20of%20Roses.jpg"},
+{title:"Looking for Langston", year:1989, desc:"Poésie queer noire, Harlem, désir et mémoire", category:"Queer", img:"images/Looking%20for%20Langston.jpg"},
+{title:"Tarnation", year:2003, desc:"Autobiographie queer VHS, traumatisme et mémoire", category:"Queer", img:"images/Tarnation.jpg"},
+{title:"Pink Narcissus", year:1971, desc:"Fantasmes homo-érotique surréaliste", category:"Queer", img:"images/Pink%20Narcissus.jpg"},
+{title:"We Were Here", year:2011, desc:"Documentaire expérimental VIH & communauté queer", category:"Queer", img:"images/We%20Were%20Here.jpg"},
+{title:"Pina", year:2011, desc:"Danse, corps, mémoire — performance expérimental", category:"Queer", img:"images/Pina.jpg"},
+  {title:"My Own Private Idaho", year:1991, desc:"Errance queer, désir asymétrique, poésie frontalière", category:"Queer", img:"images/My%20Own%20Private%20Idaho.jpg"},
+{title:"Totally F***ed Up", year:1993, desc:"Jeunesse queer marginale, collage émotionnel", category:"Queer", img:"images/Totally%20Fucked%20Up.jpg"},
+{title:"The Doom Generation", year:1995, desc:"Araki pop violent, amour queer nihiliste", category:"Queer", img:"images/The%20Doom%20Generation.jpg"},
+{title:"Orlando", year:1992, desc:"Fluidité des genres à travers les siècles", category:"Queer", img:"images/Orlando.jpg"},
+{title:"Knife + Heart", year:2018, desc:"Giallo queer néons & désir meurtrier", category:"Queer", img:"images/Knife%20%2B%20Heart.jpg"},
+{title:"Saint Maud", year:2019, desc:"Foi obsessive, corps et désir refoulé", category:"Queer", img:"images/Saint%20Maud.jpg"},
+  {title:"A Fantastic Woman", year:2017, desc:"Chili — trans identitaire, deuil et dignité", category:"Queer", img:"images/A%20Fantastic%20Woman.jpg"},
+{title:"XXY", year:2007, desc:"Argentine — intersexuation, corps en mutation", category:"Queer", img:"images/XXY.jpg"},
+{title:"Beautiful Thing", year:1996, desc:"UK — découverte queer, tendresse et réalité sociale", category:"Queer", img:"images/Beautiful%20Thing.jpg"},
+{title:"Fire!!", year:1996, desc:"Inde — queer sud-asiatique, post‑modernité & transgression", category:"Queer", img:"images/Fire!!.jpg"},
+{title:"God’s Own Country", year:2017, desc:"UK campagne, amour queer brut", category:"Queer", img:"images/Gods%20Own%20Country.jpg"},
+{title:"The Watermelon Woman", year:1996, desc:"USA — histoire queer noire & archival", category:"Queer", img:"images/The%20Watermelon%20Woman.jpg"},
+  {title:"Wavelength", year:1967, desc:"Le son & l’espace — abstraction queer possible", category:"Queer", img:"images/Wavelength.jpg"},
+{title:"Dog Star Man", year:1961, desc:"Épique expérimental, morphologies du désir", category:"Queer", img:"images/Dog%20Star%20Man.jpg"},
+{title:"Sans Soleil", year:1983, desc:"Marker — mémoire, regard & marginalité", category:"Queer", img:"images/Sans%20Soleil.jpg"},
+{title:"Suture", year:1993, desc:"Identité, doubles — thriller expérimental queer", category:"Queer", img:"images/Suture.jpg"}
 ];
 
 // restore seen
