Add 'Liquid Sky' to the movie list under 'Queer'

--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ let films = [
 {title:"Memento", year:2000, desc:"Nolan mémoire inversée, vengeance, thriller psyché", category:"Thriller", img:"images/Memento.jpg"},
 {title:"Oldboy", year:2003, desc:"Park vengeance obsessionnelle, manipulation, thriller coréen", category:"Thriller", img:"images/Oldboy.jpg"},
 {title:"The Game", year:1997, desc:"Fincher mystère jeux contrôle, suspense paranoïaque, thriller psyché", category:"Thriller", img:"images/The%20Game.jpg"},
+  // Queer
   {title:"Liquid Sky", year:1982, desc:"New wave NYC, aliens & androgynie, esthétique new wave queer", category:"Queer", img:"images/Liquid%20Sky.jpg"},
 {title:"High Life", year:2018, desc:"Sexualité, reproduction, corps en spatialité extrême", category:"Queer", img:"images/High%20Life.jpg"},
 {title:"Mute", year:2018, desc:"Cyberpunk Berlin, identité défaillante", category:"Queer", img:"images/Mute.jpg"},
