--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@ let films = [
 {title:"Sans Soleil", year:1983, desc:"Marker voyage mémoire, essais cinéma, expérimental contemplatif", category:"Expérimental", img:"images/Sans%20Soleil.jpg"},
 {title:"Dogville", year:2003, desc:"Von Trier minimalisme, théâtre filmé, expérimental narratif", category:"Expérimental", img:"images/Dogville.jpg"},
 {title:"Tropical Malady", year:2004, desc:"Apichatpong Thaïlande conte mystique, expérimental émotionnel", category:"Expérimental", img:"images/Tropical%20Malady.jpg"},
+  {title:"Tampopo", year:1985, desc:"Itami comédie culinaire décalée, western du ramen, humour sensoriel", category:"Weird", img:"images/Tampopo.jpg"},
 
 // Thriller
 {title:"The Invitation", year:2015, desc:"Dîner retrouvailles, paranoia justifiée, tension slow-burn", category:"Thriller", img:"images/The%20Invitation.jpg"},
